--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,13 @@ body{
     text-align: center;
     margin: 0px auto;
 }
+.wc-input{
+    float: left;
+    width: 100%;
+    height: 30px;
+    border: 1px solid #CCC;
+    margin-bottom: 1px;
+}
 .winkel-calendar{
     font-size: 14px;
     box-shadow: 0px 7px 23px 0px #e7e7e7;
@@ -76,7 +83,6 @@ body{
     font-size: 16px;
     color: rgba(255, 255, 255, 0.71);
     float: right;
-    transform: rotate(90deg);
 }
 .wc-year-controls{
 	padding: 4px 5px 0px 5px;
