--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ body{
     box-shadow: 0px 7px 23px 0px #e7e7e7;
     margin: 0px auto;
     perspective: 1000px;
+    float: left;
 }
 .wc-banner{
     /* background: #3ce5ed; */
