--- a/css/main.css
+++ b/css/main.css
@@ -78,3 +78,11 @@ iframe{
   background: -o-linear-gradient(#42a1ec, #0070c9);
   background: linear-gradient(#42a1ec, #0070c9);
 }
+.ad-section{
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
